force-app/main/default/objects/HFS_SOP_Execution__c/HFS_SOP_Execution__c.object-meta.xml
<CustomObject>
    <description>Versioned SOP execution state for a work item.</description>
    <label>SOP Execution</label>
    <nameField>
        <displayFormat>SOP-{000000}</displayFormat>
        <label>SOP Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOP Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>