force-app/main/default/objects/HFS_SOP_Execution__c/fields/Current_Step_Key__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_Key__c</fullName>
    <label>Current Step Key</label>
    <length>160</length>
    <type>Text</type>
</CustomField>