force-app/main/default/objects/HFS_SOP_Execution__c/fields/Definition_Key__c.field-meta.xml
<CustomField>
    <fullName>Definition_Key__c</fullName>
    <label>Definition Key</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
</CustomField>