force-app/main/default/objects/HFS_SOP_Execution__c/fields/Definition_Version__c.field-meta.xml
<CustomField>
    <fullName>Definition_Version__c</fullName>
    <label>Definition Version</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>