force-app/main/default/objects/HFS_SOP_Execution__c/fields/Escalation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Rule__c</fullName>
    <label>Escalation Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>