force-app/main/default/objects/HFS_SOP_Execution__c/fields/Required_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Required_Evidence__c</fullName>
    <label>Required Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>