force-app/main/default/objects/HFS_SOP_Execution__c/validationRules/Completion_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_After_Start</fullName>
    <active>true</active>
    <description>Completed At cannot be earlier than Started At.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Completed_At__c)), Completed_At__c &lt; Started_At__c)</errorConditionFormula>
    <errorMessage>Completed At cannot be earlier than Started At.</errorMessage>
</ValidationRule>